# tech_challenge_rt

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: quality.yml
app/src/: main.cpp  segfault_autoload.cpp
install/lib/: plugin.lib
package/lib/: plugin_segfault.lib
plugin/include/plugin/: plugin.h
plugin/src/: plugin.cpp  segfault_plugin.cpp
test_package/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py
test_package/src/: test_package.cpp
tests/: segfault_helper.cpp  test_plugin.cpp  test_segfault_plugin.cpp
